--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,8 @@
             text-align: center;
         }
 
-        .h3 {
+        .h3,
+        h2 {
             text-align: center;
         }
     </style>
@@ -24,22 +25,30 @@
             <h1 class="display-4">Mission to Mars</h1>
             <a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a>
         </div>
+
+        <!-- Mars News -->
         <div class='row' id='mars_news'>
             <div class='col-md-12'>
                 <h2>Latest Mars News</h2>
-                <h4>{{mars.mars_title}}</h4>
-                <p>{{mars.mars_p}}</p>
+                <h4>{{mars.news_title}}</h4>
+                <p>{{mars.news_paragraph}}</p>
             </div>
         </div>
+
+        <!-- Featured Image -->
         <div class='row'>
             <div class='col-md-8'>
                 <h2>Featured Mars Image</h2>
                 <img src='{{mars.featured_image_url}}' alt='Featured Mars Image'>
             </div>
+
+            <!-- Mars Weather  -->
             <div class='col-md-4'>
                 <h4>Current Weather on Mars</h4>
                 <p>{{mars.mars_weather}}</p>
             </div>
+
+            <!-- Mars Facts -->
             <div class='col-md-4'>
                 <h4>Mars Facts</h4>
                 <p>{{mars.mars_html|safe}}</p>
@@ -50,25 +59,19 @@
                 <h3>Mars Hemispheres</h3>
             </div>
         </div>
+
+        <!-- Hemispheres -->
         <div class='row justify-content-center'>
-            <div class='col-md-6'>
-                <img src="{{mars.mars_hemis[0]['img_url']}}" alt='Cerberus hemisphere'>
-                <h3>{{mars.mars_hemis[0]['title']}}</h3>
+            <div class='col-md-12'>
+                <h2>Mars Hemispheres</h2>
+            <div class='row justify-content-center'>
+                {% for value in mars['mars_hemis'] %}
+                <div class='col-md-6'>
+                    <a href ="{{value['img_url']}}" target='hemisphere'>
+                    <img src="{{value['img_url']}}" alt='hemisphere'>
+                </a>
             </div>
-            <div class='col-md-6'>
-                <img src="{{mars.mars_hemis[1]['img_url']}}" alt='Schiaparelli hemisphere'>
-                <h3>{{mars.mars_hemis[1]['title']}}</h3>
-            </div>
-        </div>
-        <div class='row justify-content-center'>
-            <div class='col-md-6'>
-                <img src="{{mars.mars_hemis[2]['img_url']}}" alt='Schiaparelli hemisphere'>
-                <h3>{{mars.mars_hemis[2]['title']}}</h3>
-            </div>
-            <div class='col-md-6'>
-                <img src="{{mars.mars_hemis[2]['img_url']}}" alt='Schiaparelli hemisphere'>
-                <h3>{{mars.mars_hemis[2]['title']}}</h3>
-            </div>
+            {% endfor %}
         </div>
     </div>
 
