--- a/templates/index.html
+++ b/templates/index.html
@@ -37,9 +37,12 @@
 
         <!-- Featured Image -->
         <div class='row'>
-            <div class='col-md-8'>
+            <div class='col-md-6'>
                 <h2>Featured Mars Image</h2>
-                <img src='{{mars.featured_image_url}}' alt='Featured Mars Image'>
+                <img src='{{mars.featured_image}}' alt='Featured Mars Image'>
+            </div>
+
+            <div class='col-md-2'>
             </div>
 
             <!-- Mars Weather  -->
@@ -51,7 +54,7 @@
             <!-- Mars Facts -->
             <div class='col-md-4'>
                 <h4>Mars Facts</h4>
-                <p>{{mars.mars_html|safe}}</p>
+                <p>{{mars.mars_facts|safe}}</p>
             </div>
         </div>
         <div class='row justify-content-center' id='mars_hemispheres'>
@@ -64,16 +67,19 @@
         <div class='row justify-content-center'>
             <div class='col-md-12'>
                 <h2>Mars Hemispheres</h2>
-            <div class='row justify-content-center'>
-                {% for value in mars['mars_hemis'] %}
-                <div class='col-md-6'>
-                    <a href ="{{value['img_url']}}" target='hemisphere'>
-                    <img src="{{value['img_url']}}" alt='hemisphere'>
-                </a>
+                <div class='row justify-content-center'>
+                    {% for value in mars['mars_hemis'] %}
+                    <div class='col-md-6'>
+                        <a href="{{value['img_url']}}" target='hemisphere'>
+                            <img src="{{value['img_url']}}" alt='hemisphere' style='width:80%'>
+                            <div class='caption'>
+                                <h3 style='text-align: center; font-size: 25px;'>{{value['title']}}</h3>
+                            </div>
+                        </a>
+                    </div>
+                    {% endfor %}
+                </div>
             </div>
-            {% endfor %}
-        </div>
-    </div>
 
 </body>
 
